--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="author" content="SpeedoThreeSixty (Dean Alan Summer)">
     <title>2D Altered Minecraft</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" type="image/x-icon" href="minecraft.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script defer src="script.js"></script>
   </head>
   <body>
