--- a/index.html
+++ b/index.html
@@ -26,3 +26,5 @@
     <footer>
       <p>© SpeedoThreeSixty (Dean Alan Summer) 2021. This Project Is Under The MPL-2.0 License. For Unofficial Use Only. All Rights Reserved.</p>
     </footer>
+  </body>
+</html>
