--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script defer src="script.js"></script>
   </head>
-  <body onload="startGame()">
+  <body>
     <header>
       <h1>2D Altered Minecraft</h1>
       <nav>
