--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <a href="https://github.com/JavascriptLearner815/2d-altered-minecraft" target="_blank">GitHub</a>
       </nav>
     </header>
+    <hr>
     <main id="main">
+      <wbr>
       <div style="text-align:center;width:480px;">
         <button onmousedown="up()" onmouseup="stop()" ontouchstart="up()">UP</button>
         <button onmousedown="down()" onmouseup="stop()" ontouchstart="down()">DOWN</button>
@@ -28,6 +30,7 @@
         <button onmousedown="right()" onmouseup="stop()" ontouchstart="right()">RIGHT</button>
       </div>
     </main>
+    <hr>
     <footer>
       <p>© SpeedoThreeSixty (Dean Alan Summer) 2021. This Project Is Under The MPL-2.0 License. For Unofficial Use Only. All Rights Reserved.</p>
     </footer>
